# cloudformation-to-terraform

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  README.md  cfn2tf.py  convert-cfn-spec.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  util.py
.github/workflows/: python-test.yml  python-tst.yml
docs/: Makefile  conf.py  index.rst
generated-spec/: access_analyzer.py  acmpca.py  amazon_mq.py  amplify.py  api_gateway.py  api_gateway_v2.py  app_config.py  app_mesh.py  app_stream.py  app_sync.py  application_auto_scaling.py  ask.py  athena.py  auto_scaling.py  auto_scaling_plans.py  backup.py  batch.py  budgets.py  cassandra.py  ce.py  certificate_manager.py  chatbot.py  cloud9.py  cloud_formation.py  cloud_front.py  cloud_trail.py  cloud_watch.py  code_build.py  code_commit.py  code_deploy.py  code_guru_profiler.py  code_pipeline.py  code_star.py  code_star_connections.py  code_star_notifications.py  cognito.py  config.py  data_pipeline.py  dax.py  detective.py  (+87 more)
spec/: __init__.py  logs.py
src/: CloudFormationResourceSpecification.json  _regenerate_spec.py  _tf_spec.py  cfn2tf.py
src/cloudformation_to_terraform/: main.py  skeleton.py  util.py
src/generated-spec/: _regenerate_spec.py  _tf_spec.py  acmpca.py  amazon_mq.py  amplify.py  api_gateway_v2.py  app_config.py  app_mesh.py  app_stream.py  app_sync.py  application_auto_scaling.py  ask.py  auto_scaling_plans.py  budgets.py  cloud_trail.py  code_build.py  code_guru_profiler.py  code_star_connections.py  cognito.py  data_pipeline.py  detective.py  doc_db.py  dynamo_db.py  ecr.py  efs.py  eks.py  elasti_cache.py  elastic_load_balancing.py  elasticsearch.py  elb_v2.py  event_schemas.py  fms.py  greengrass.py  guard_duty.py  image_builder.py  inspector.py  (+32 more)
tests/: conftest.py  test_convert.py  test_skeleton.py
(+11 files in other folders)
