[metadata]
name = cloudformation-to-terraform
description = Convert Cloudformation templates to Terrafrom
author = wheerd
author-email = admin@wheerd.de
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/wheerd/cloudformation-to-terraform
project-urls =
    Documentation = https://github.com/wheerd/cloudformation-to-terraform
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    cfn-flip
python_requires = >=3.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
generate =
    fuzzywuzzy
    python-Levenshtein-wheels
    scipy
    numpy
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    cf2tf = cloudformation_to_terraform.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov cloudformation_to_terraform --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = cloudformation_to_terraform
extensions =
    markdown
